[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pubnub_python_tools"
version = "v1.0.rc-3"
authors = [{ name = "Sergio Munoz", email = "sergio.munoz@pubnub.com" }]
description = "Quickly interact with PubNub's Python SDK."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sergio-munoz/pubnub-python-tools/"
"Bug Tracker" = "https://github.com/sergio-munoz/pubnub-python-tools/issues"
